--- a/Views/Job/GetAllJobs.cshtml
+++ b/Views/Job/GetAllJobs.cshtml
@@ -20,7 +20,7 @@
         <p><strong>Salary:</strong> @job.jobSalary</p>
         <p><strong>Company Name:</strong> @job.jobCompanyName</p>
         <p><strong>Requirements:</strong> @job.jobRequirements</p>
-        <p><strong>Deadline:</strong> @job.deadline.ToShortDateString()</p>
+        <p><strong>Deadline:</strong> @job.deadline.ToString()</p>
         <p><strong>No. of Employees:</strong> @job.noEmployees</p>
     </div>
 }
